# EmailLoaderSocket

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: asgi.py  settings.py  urls.py  utils.py
docker/django/: Dockerfile
mailscaner/: admin.py  apps.py  consumers.py  forms.py  models.py  regex.py  routing.py  urls.py  views.py
mailscaner/mail_parser/: __init__.py  abc.py  connect.py  parser.py
mailscaner/mail_parser/connections/: __init__.py  abc.py  base.py  connections.py  exeptions.py
mailscaner/migrations/: 0001_initial.py  0002_alter_email_password.py  0003_email_last_index_message_sender_alter_message_title.py  0004_file_remove_message_file_message_files.py  0005_alter_message_text.py  0006_alter_file_file.py  0007_alter_file_file.py  0008_email_unique_user_address_constraint.py  0009_alter_file_options.py
mailscaner/templates/includes/: in_download.html  in_email_create.html  in_emails.html  in_main.html  in_message.html  in_messages.html  in_script_download.html
mailscaner/templates/mailscaner/: delete_mail.html  done.html  download.html  email_create.html  email_not_found.html  emails.html  main.html  message_detail.html  message_not_found.html  messages_list.html
mailscaner/tests/: test_email_parser.py
static/js/: websocketJs.js
templates/: base.html  paginate.html
templates/includes/: nav_bar.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_image.py  0003_user_emails.py
users/templates/includes/: in_login.html  in_registration.html  in_user.html
(+4 files in other folders)
