[tool.poetry]
name = "comsoftlab-test"
version = "0.1.0"
description = ""
authors = ["Alex Pavlov <yukiu217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
redis = "^5.1.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
channels = "4.0.0"
channels-redis = "4.1.0"
daphne = "4.0.0"
bs4 = "^0.0.2"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
